fix(marquee): fix marquee caption alignment

--- a/templates/consonant/blocks/marquee/marquee.css
+++ b/templates/consonant/blocks/marquee/marquee.css
@@ -281,6 +281,17 @@ main .marquee .marquee-caption p {
     box-sizing: content-box;
 }
 
+main .marquee .marquee-caption > div:nth-child(2) {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding-bottom: 32px;
+    text-align: right;
+}
+main .marquee .marquee-caption > div:nth-child(2) p {
+    width: unset;
+}
+
 @media screen and (max-width: 799px) {
     main .marquee .marquee-caption p {
         max-width: var(--max-width-mobile);
